fix layout; add margin to body for improved spacing

--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ body
     border-radius:50%;
     overflow:hidden;
     background:#111827;
+    margin: 100px;
 }
 .pfp
 {
